add contact responsive

--- a/assed/template/contact_site.html
+++ b/assed/template/contact_site.html
@@ -103,7 +103,7 @@
 
   <!-- Menu contact options (only for responsive) -->
   <div
-    onclick="displayNone('overlay-add-contact', 'remove'), displayNone('edit-contact-img-mobile-div', 'add'), displayNone('cancel-create-contact', 'add'), displayNone('edit-contact', 'remove')"
+    onclick="displayNone('overlay-add-contact', 'remove'), displayNone('edit-contact-img-mobile-div', 'add'), displayNone('cancel-create-contact', 'add'), displayNone('edit-contact', 'remove'), displayNone('show-contact', 'add')"
     id="edit-contact-img-mobile-div" class="add-contact-img-mobile-div menu-contact-options-responsive">
     <img src="assed/svg/contact-imgs/Menu Contact options.svg" alt="">
   </div>
