--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -14,6 +14,7 @@
     gap: 30vh;
     align-items: center;
     flex-shrink: 0;
+    z-index: 9999;
 }
 
 /*.task{
@@ -49,3 +50,4 @@ h3 {
 .bg-color-active {
     background-color: #091931 !important;
 }
+
