--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -49,3 +49,10 @@ h3 {
 .bg-color-active {
     background-color: #091931 !important;
 }
+
+
+@media (max-width: 700px) {
+    .sidebar {
+        display: none !important;
+    }
+}
