Impressum / DS eingefügt

--- a/assed/template/header.html
+++ b/assed/template/header.html
@@ -15,7 +15,7 @@
         </svg>
         <div id="subMenu" class="d-none">
             <div>
-                <div><a href="/datenschutzerkl.html">Legal Notice</a></div>
+                <div><a href="/impressum.html">Legal Notice</a></div>
                 <div><a href="/datenschutzerkl.html">Privacy Policy</a></div>
                 <div><a href="/index.html">Log Out</a></div>
             </div>
