--- a/assed/template/sidebar.html
+++ b/assed/template/sidebar.html
@@ -25,8 +25,14 @@
       <img src="/assed/svg/contact.svg" alt="">
       <h3>Contact</h3>
     </div>
-
+    <div>
+      <a href="datenschutzerkl.html">Privacy Policy</a>
+    </div>
+    <div>
+      <a href="impressum.html">Legal notice</a>
+    </div>
   </div>
+
 </div>
 
 
