--- a/css/header_mobile.css
+++ b/css/header_mobile.css
@@ -2,13 +2,13 @@
 @media (max-width: 700px) {
 
 .mobile-header {
-    position: absolute;
+    position: fixed;
     top: 0;
     display: flex;
     justify-content: space-between;
     justify-content: space-between;
     align-items: center;
-    width: 428px;
+    width: 100%;
     height: 89px;
     box-shadow: 0px 4px 4px 0 rgba(0, 0, 0, 0.1);  /* shadow on the bottom of the box */
     background-color: #FFFFFF;
