--- a/css/style.css
+++ b/css/style.css
@@ -436,3 +436,9 @@ input {
     height: 158px;
     background-color: #2a3647;
 }
+
+@media (max-width: 700px){
+    .header-figma{
+        display: none;
+    }
+}
