--- a/assed/template/header.html
+++ b/assed/template/header.html
@@ -13,11 +13,11 @@
                     fill="#A8A8A8" />
             </g>
         </svg>
-        <div id="subMenu" class="d-none">
+        <div id="subMenu" class="d-none sub-menu">
             <div>
-                <div><a href="/impressum.html">Legal Notice</a></div>
-                <div><a href="/datenschutzerkl.html">Privacy Policy</a></div>
-                <div><a href="/index.html">Log Out</a></div>
+                <div class="sub-link"><a href="/impressum.html">Legal Notice</a></div>
+                <div class="sub-link"><a href="/datenschutzerkl.html">Privacy Policy</a></div>
+                <div class="sub-link"><a href="/index.html">Log Out</a></div>
             </div>
         </div>
         <div class="group-5" onclick="loadSubMenu()">
