--- a/assed/template/header_mobile.html
+++ b/assed/template/header_mobile.html
@@ -2,12 +2,20 @@
     <div>
         <img class="logo-img-mobile-header" src="assed/svg/contact-imgs/Capa 3.svg" alt="">
     </div>
-    <div  class="circle-img-mobile-header">
+
+    <div id="subMenu2" class="d-none sub-menu">
         <div>
-            <img src="assed/svg/contact-imgs/Ellipse 13.svg" alt="">
-        </div>
-        <div class="circle-txt-div">
-            AB
+            <div class="sub-link"><a href="/impressum.html">Legal Notice</a></div>
+            <div class="sub-link"><a href="/datenschutzerkl.html">Privacy Policy</a></div>
+            <div class="sub-link"><a href="/index.html">Log Out</a></div>
         </div>
     </div>
+    <div class="group-5" onclick="loadSubMenu(2)">
+        <svg xmlns="http://www.w3.org/2000/svg" width="56" height="56" viewBox="0 0 56 56">
+            <circle cx="28" cy="28" r="26.5" stroke="#2A3647" stroke-width="3" fill="none"/>
+            <text class="frame-156-text" x="50%" y="50%" text-anchor="middle"
+                alignment-baseline="middle" style="color: #29ABE2;" id="actUser"></text>
+        </svg>
+    </div>
+
 </div>
