--- a/css/addtask.css
+++ b/css/addtask.css
@@ -123,6 +123,12 @@
     line-height: 120%;
 }
 
-/* @media  {
-    
-} */
+@media (max-width: 700px){
+    .addTaskHtml{
+        position: fixed;
+        top: 10%;
+        left: 5%;
+        gap: 15px;
+        padding-left: 0;
+    }
+}
