--- a/assed/template/header.html
+++ b/assed/template/header.html
@@ -15,16 +15,16 @@
         </svg>
         <div id="subMenu1" class="d-none sub-menu">
             <div>
-                <div class="sub-link"><a href="/impressum.html">Legal Notice</a></div>
-                <div class="sub-link"><a href="/datenschutzerkl.html">Privacy Policy</a></div>
-                <div class="sub-link"><a href="/index.html">Log Out</a></div>
+                <div class="sub-link"><a href="impressum.html">Legal Notice</a></div>
+                <div class="sub-link"><a href="datenschutzerkl.html">Privacy Policy</a></div>
+                <div class="sub-link"><a href="../join/index.html">Log Out</a></div>
             </div>
         </div>
         <div class="group-5" onclick="loadSubMenu(1)">
             <svg xmlns="http://www.w3.org/2000/svg" width="56" height="56" viewBox="0 0 56 56">
                 <circle cx="28" cy="28" r="26.5" stroke="#2A3647" stroke-width="3" fill="none"/>
                 <text class="frame-156-text" x="50%" y="50%" text-anchor="middle"
-                    alignment-baseline="middle" style="color: #29ABE2;" id="actUser1"></text>
+                    alignment-baseline="middle" style="color: #29ABE2;" id="actUser"></text>
             </svg>
         </div>
 
