--- a/assed/template/sidebar_mobile.html
+++ b/assed/template/sidebar_mobile.html
@@ -7,22 +7,22 @@
     <div class="prop-1-default-responsive">
   
       <div class="sideMenu-responsive" id="summary" onclick="loadNextSite('summary')">
-        <img class="siedeMenu-img-responsive" src="/assed/svg/summary.svg" alt="">
+        <img class="siedeMenu-img-responsive" src="assed/svg/summary.svg" alt="">
         <h3 class="sideMenu-txt-responsive">Summary</h3>
       </div>
   
       <div class="sideMenu-responsive" id="addtask" onclick="loadNextSite('addtask')">
-        <img class="siedeMenu-img-responsive" src="/assed/svg/add_task.svg" alt="">
+        <img class="siedeMenu-img-responsive" src="assed/svg/add_task.svg" alt="">
         <h3 class="sideMenu-txt-responsive">Add Task</h3>
       </div>
   
       <div class="sideMenu-responsive" id="addtask" onclick="loadNextSite('board')">
-        <img class="siedeMenu-img-responsive" src="/assed/svg/board.svg" alt="">
+        <img class="siedeMenu-img-responsive" src="assed/svg/board.svg" alt="">
         <h3 class="sideMenu-txt-responsive">Board</h3>
       </div>
   
       <div class="sideMenu-responsive" id="addtask" onclick="loadNextSite('contact')">
-        <img class="siedeMenu-img-responsive" src="/assed/svg/contact.svg" alt="">
+        <img class="siedeMenu-img-responsive" src="assed/svg/contact.svg" alt="">
         <h3 class="sideMenu-txt-responsive">Contact</h3>
       </div>
   
