--- a/assed/template/task_form.html
+++ b/assed/template/task_form.html
@@ -57,17 +57,17 @@
         <button type="button" class="priority-button priority-button-text txt-nodeco " tabindex="0" id="urgentBtn"
           onclick="selectPriority(id)">
           <a style="text-decoration: none; color: black;">Urgent</a>
-          <img src="/assed/svg/Prio alta.svg" alt="">
+          <img src="assed/svg/Prio alta.svg" alt="">
         </button>
         <button type="button" class="priority-button priority-button-medium priority-button-text txt-nodeco"
           tabindex="1" id="mediumBtn" onclick="selectPriority(id)">
           <a style="text-decoration: none; color: black;">Medium</a>
-          <img src="/assed/svg/Prio media.svg" alt="">
+          <img src="assed/svg/Prio media.svg" alt="">
         </button>
         <button type="button" class="priority-button priority-button-low priority-button-text txt-nodeco" tabindex="2"
           id="lowBtn" onclick="selectPriority(id)">
           <a style="text-decoration: none; color: black;">Low</a>
-          <img src="/assed/svg/Prio baja.svg" alt="">
+          <img src="assed/svg/Prio baja.svg" alt="">
         </button>
       </div>
     </div>
