--- a/assed/template/draggablecards.html
+++ b/assed/template/draggablecards.html
@@ -8,13 +8,13 @@
                         <input type="search" class="search-input" name="Find Task" id="findtaskinput"
                             placeholder="Search Task">
                         <span class="search-icon">
-                            <img src="/assed/svg/search.svg" alt="">
+                            <img src="assed/svg/search.svg" alt="">
                         </span>
 
                     </div>
                     <button class="add-new-task-btn" onclick="addTaskPopUp(id), loadAssigned()">
                         <p class="add-new-task-text-div">Add Task</p>
-                        <img src="/assed/svg/add.svg" alt="">
+                        <img src="assed/svg/add.svg" alt="">
                     </button>
                 </div>
             </div>
@@ -24,7 +24,7 @@
             <div class="kanban-column" id="todo-column" ondrop="drop('To Do')" ondragover="allowDrop(event)">
                 <div class="frame-136 column-title-text ">
                     <p>To Do</p>
-                    <div class="plus-button"><img src="/assed/svg/capa-1.svg" alt="" onclick="addTaskPopUp(id), loadAssigned(), alert(0)"></div>
+                    <div class="plus-button"><img src="assed/svg/capa-1.svg" alt="" onclick="addTaskPopUp(id), loadAssigned(), alert(0)"></div>
                 </div>
                 <div class="kanban-card-display" id="todo-tasks">
                 </div>
@@ -33,7 +33,7 @@
                 ondragover="allowDrop(event)">
                 <div class="frame-136 column-title-text ">
                     <p>In Progress</p>
-                    <div class="plus-button"><img src="/assed/svg/capa-1.svg" alt="" onclick="addTaskPopUp(id), loadAssigned()"></div>
+                    <div class="plus-button"><img src="assed/svg/capa-1.svg" alt="" onclick="addTaskPopUp(id), loadAssigned()"></div>
                 </div>
                 <div class="kanban-card-display" id="inprogress-tasks">
                 </div>
@@ -42,7 +42,7 @@
                 ondragover="allowDrop(event)">
                 <div class="frame-136 column-title-text ">
                     <p>Awaiting Feedback</p>
-                    <div class="plus-button"><img src="/assed/svg/capa-1.svg" alt="" onclick="addTaskPopUp(id), loadAssigned()"></div>
+                    <div class="plus-button"><img src="assed/svg/capa-1.svg" alt="" onclick="addTaskPopUp(id), loadAssigned()"></div>
                 </div>
                 <div class="kanban-card-display" id="Feedback-tasks"></div>
             </div>
