--- a/assed/template/header_mobile.html
+++ b/assed/template/header_mobile.html
@@ -5,9 +5,9 @@
 
     <div id="subMenu2" class="d-none sub-menu">
         <div>
-            <div class="sub-link"><a href="/impressum.html">Legal Notice</a></div>
-            <div class="sub-link"><a href="/datenschutzerkl.html">Privacy Policy</a></div>
-            <div class="sub-link"><a href="/index.html">Log Out</a></div>
+            <div class="sub-link"><a href="impressum.html">Legal Notice</a></div>
+            <div class="sub-link"><a href="datenschutzerkl.html">Privacy Policy</a></div>
+            <div class="sub-link"><a href="../join/index.html">Log Out</a></div>
         </div>
     </div>
     <div class="group-5" onclick="loadSubMenu(2)">
