--- a/assed/template/html-template.html
+++ b/assed/template/html-template.html
@@ -7,12 +7,12 @@
     <title>addtask</title>
 
     <!-- customize Stylefiles-->
-    <link rel="stylesheet" type="text/css" href="/css/chatgtp.css">
-    <link rel="stylesheet" type="text/css" href="/css/generalElements.css">
-    <link rel="stylesheet" type="text/css" href="/css/sidebar.css">
-    <link rel="stylesheet" type="text/css" href="/css/style.css">
-    <link rel="stylesheet" type="text/css" href="/css/styleguide.css">
-    <link rel="stylesheet" type="text/css" href="/css/addtask.css">
+    <link rel="stylesheet" type="text/css" href="css/chatgtp.css">
+    <link rel="stylesheet" type="text/css" href="css/generalElements.css">
+    <link rel="stylesheet" type="text/css" href="css/sidebar.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/styleguide.css">
+    <link rel="stylesheet" type="text/css" href="css/addtask.css">
 
     <!-- customize Font -->
 
@@ -41,7 +41,7 @@
 
     <!-- Favivon -->
 
-    <link rel="shortcut icon" href="/assed/svg/join_logo.svg" type="image/svg+xml">
+    <link rel="shortcut icon" href="assed/svg/join_logo.svg" type="image/svg+xml">
 
     <!-- Hello World -->
 
