--- a/css/addContactResponsive.css
+++ b/css/addContactResponsive.css
@@ -1,7 +1,8 @@
 @media (max-width: 700px) {
 
     .overlay-add-contact-outer-div {
-        width: 428px;
+        /*width: 428px;*/
+        width: 100%;
         height: 926px;
         position: absolute;
         z-index: 1;
