--- a/assed/template/addContact.html
+++ b/assed/template/addContact.html
@@ -1,4 +1,4 @@
-<div id="overlay-add-contact" class="overlay-add-contact d-none">
+<div id="" class="overlay-add-contact d-none">
   <div
     onclick=" emptyInputfields(),closeAddContactOverlay(), showCreateContactBtns()"
     class="close-div"
