--- a/css/addtask.css
+++ b/css/addtask.css
@@ -14,7 +14,8 @@
 .frame-219 {
 
     display: flex;
-    width: 440px;
+    max-width: 26vw;
+    min-width: 15vw;
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
@@ -26,7 +27,8 @@
 .frame-39 {
 
     display: flex;
-    width: 440px;
+    max-width: 26vw;
+    min-width: 15vw;
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
