--- a/css/generalElements.css
+++ b/css/generalElements.css
@@ -83,7 +83,7 @@
 
 .priority-button-group {
     display: flex;
-    width: 440px;
+    width: 100%;
     justify-content: center;
     align-items: center;
     gap: 16px;
