contacts random  background(circle) colors working

--- a/assed/template/contact_site.html
+++ b/assed/template/contact_site.html
@@ -13,7 +13,7 @@
     </div>  -->
 
     <div class="btn-div">
-      <button class="add-new-contact-btn" onclick="initAddContact()">
+      <button class="add-new-contact-btn" onclick="initAddContact(), createRandomColors()">
         <div class="add-new-contact-text-div">Add new contact</div>
 
         <img src="assed/svg/contact-imgs/person_add.svg" alt="" class="add-img" />
