--- a/assed/template/contact_site.html
+++ b/assed/template/contact_site.html
@@ -61,7 +61,8 @@
   <div id="view-contact-div" class="view-contact-div">
     <div class="show-name">
       <div class="show-name-circle">
-        <img src="assed/svg/contact-imgs/Ellipse 5.svg" alt="" class="show-name-circle-img" />
+        <div id="show-name-circle-div" class="show-name-circle-div"></div>
+        <!-- <img src="assed/svg/contact-imgs/Ellipse 5.svg" alt="" class="show-name-circle-img" /> --> 
         <div class="show-name-circle-txt" id="iconDetail">AM</div>
       </div>
 
